# ffreis-rust-onnx-model-converter

./: .coverage  .gitignore  .pre-commit-config.yaml  .trivyignore.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  codecov.yml  convert_to_onnx.py  coverage-e2e.xml  pyproject.toml  requirements.txt  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: api-grpc-smoke.yml  architecture.yml  build-containers.yml  build-python.yml  code-quality.yml  code-review.yml  code-security.yml  commit-checks.yml  coverage.yml  deepsource.yml  e2e.yml  examples.yml  grpc-sync.yml  grype.yml  hypothesis-integration.yml  integration.yml  lint.yml  lock-sync.yml  semgrep.yml  snyk.yml  trivy.yml
container/: Dockerfile.autosklearn1  Dockerfile.autosklearn2  Dockerfile.base  Dockerfile.base-runner  Dockerfile.cli  Dockerfile.example-base  Dockerfile.example-compare-sklearn  Dockerfile.example-optuna-sklearn  Dockerfile.example-pytorch  Dockerfile.example-sklearn  Dockerfile.example-sklearn-custom-cli  Dockerfile.example-tensorflow  Dockerfile.package  Dockerfile.runner  Dockerfile.services  Dockerfile.uv-builder  digests.env
container/examples/: Dockerfile.example-autosklearn1  Dockerfile.example-autosklearn2  Dockerfile.example-base  Dockerfile.example-compare-sklearn  Dockerfile.example-optuna-sklearn  Dockerfile.example-pytorch  Dockerfile.example-sklearn  Dockerfile.example-sklearn-custom-cli  Dockerfile.example-tensorflow
docs/: architecture.md  converter.md  openapi.yaml  plugin-authoring.md
examples/: autosklearn_plugin.py  autosklearn_roundtrip.py  compare_sklearn_vs_onnx.py  custom_sklearn_transformer.py  docker-compose.api-grpc.yml  optuna_sklearn_example.py  pytorch_example.py  sklearn_custom_cli_example.py  sklearn_example.py  smoke_api_grpc.py  tensorflow_example.py
proto/converter_grpc/: converter.proto
scripts/: check_architecture.py  check_dependencies_sync.py  check_grpc_stubs.sh  check_openapi.py  check_orchestrator_complexity.py  generate_grpc_stubs.sh  generate_requirements.py
src/converter_grpc/: __init__.py  converter_pb2.py  converter_pb2_grpc.py
src/onnx_converter/: __init__.py  api.py  cli.py  parity.py  postprocess.py  schemas.py  types.py  validate.py
src/onnx_converter/adapters/: converters.py  loaders.py  parity_checkers.py
src/onnx_converter/application/: __init__.py  options.py  ports.py  results.py  use_cases.py
src/onnx_converter/cli/: cli.py
src/onnx_converter/converter/: __init__.py  core.py  grpc_server.py  http_server.py
src/onnx_converter/converters/: __init__.py  pytorch_converter.py  sklearn_converter.py  tensorflow_converter.py
src/onnx_converter/infrastructure/: postprocessing.py
src/onnx_converter/plugins/: __init__.py  base.py  builtins.py  registry.py
tests/: conftest.py
tests/e2e_tests/: test_cli_help.py  test_cli_sklearn_roundtrip.py
tests/integration_tests/: test_grpc_parity.py
tests/integration_tests/cli/: conftest.py  test_cli.py  test_cli_custom_sklearn.py  test_cli_doctor.py
tests/integration_tests/converters/: __init__.py  conftest.py  test_pytorch_converter.py  test_sklearn_converter.py  test_tensorflow_converter.py
tests/unit_tests/: test_api_and_postprocessing_impl.py  test_parity_utils.py  test_public_wrappers.py  test_validate_and_postprocess.py
tests/unit_tests/adapters/: test_adapter_contracts.py  test_loaders_and_parity_checkers.py
tests/unit_tests/application/: test_use_case_contracts.py
tests/unit_tests/cli/: conftest.py  test_cli.py  test_cli_more.py
tests/unit_tests/converter/: test_core.py  test_grpc_server.py  test_http_server.py
tests/unit_tests/converters/: __init__.py  conftest.py  test_api_validation.py  test_lowlevel_converters.py  test_pytorch_converter.py  test_sklearn_converter.py  test_tensorflow_converter.py
tests/unit_tests/plugins/: test_builtin_sklearn_plugin.py  test_registry_core.py
