[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-model-converter"
version = "0.1.0"
description = "Convert PyTorch, TensorFlow/Keras, and scikit-learn models to ONNX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    # tf2onnx (Python <3.13 path) still constrains protobuf<4, which conflicts
    # with onnx>=1.20 (protobuf>=4). Keep latest where possible.
    "onnx>=1.17.0,<1.20; python_version < '3.13'",
    "onnx>=1.20.1; python_version >= '3.13'",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
cli = [
    "typer>=0.23.1",
    "rich>=14.3.2",
]
runtime = [
    "onnxruntime>=1.24.1",
    "onnxoptimizer>=0.4.2",
]
torch = [
    "torch>=2.10.0",
    "torchvision>=0.21.0",
    "onnxscript>=0.6.2",
]
# Legacy TensorFlow conversion path. Kept separate because tf2onnx currently
# constrains protobuf<4 on Python <3.13.
tf_legacy = [
    "tensorflow>=2.19.1; python_version < '3.13'",
    "tf2onnx>=1.16.1; python_version < '3.13'",
]
# Backward-compatible alias for existing users.
tensorflow = [
    "tensorflow>=2.19.1; python_version < '3.13'",
    "tf2onnx>=1.16.1; python_version < '3.13'",
]
sklearn = [
    "scikit-learn>=1.8.0; python_version >= '3.11'",
    "skl2onnx>=1.20.0; python_version >= '3.11'",
    # strongly recommended for loading:
    "joblib>=1.5.3; python_version >= '3.11'",
    # recommended for safer sklearn serialization:
    "skops>=0.13.0; python_version >= '3.11'",
]
autosklearn = [
    "auto-sklearn==0.15.0; python_version < '3.11'",
]
# TensorFlow example-only dependency set pinned for compatibility.
tf_example = [
    "tensorflow>=2.19,<2.20; python_version < '3.13'",
    "tf2onnx>=1.16,<1.17; python_version < '3.13' and sys_platform != 'win32'",
    "protobuf>=3.20,<4; python_version < '3.13' and sys_platform != 'win32'",
]
optuna = [
    "optuna>=4.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
]
grpc = [
    "grpcio>=1.66.0",
    "protobuf>=5.27.0; python_version >= '3.13'",
    "protobuf>=3.20,<4; python_version < '3.13'",
]
all = [
    "onnxruntime>=1.24.1",
    "onnxoptimizer>=0.4.2",
    "typer>=0.23.1",
    "rich>=14.3.2",
    "torch>=2.10.0",
    "torchvision>=0.21.0",
    "onnxscript>=0.6.2",
    "optuna>=4.7.0",
]

[project.scripts]
# Typer app entrypoint (recommended)
convert-to-onnx = "onnx_converter.cli:app"
converter-http = "onnx_converter.converter.http_server:main"
converter-grpc = "onnx_converter.converter.grpc_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["onnx_converter"]
force_single_line = true
skip_gitignore = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "venv", "__pycache__"]
show-source = true

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = "(venv|.venv|tests/helpers|src/converter_grpc)"
files = ["src"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["onnx_converter.cli.cli"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["onnx_converter.converter.http_server"]
disallow_untyped_decorators = false

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".venv", "venv", "__pycache__", "src/converter_grpc"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"src/onnx_converter/cli/cli.py" = ["B008"]
"examples/**/*.py" = ["D", "ANN"]
"scripts/**/*.py" = ["D", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests/unit_tests", "tests/integration_tests", "tests/e2e_tests"]
addopts = "--strict-markers --tb=short -ra --import-mode=importlib"
markers = [
    "unit: fast, isolated unit tests",
    "integration: integration tests that may require optional deps",
    "e2e: end-to-end tests that exercise the public CLI flow",
]

[tool.coverage.run]
branch = true
source = ["onnx_converter"]
parallel = true
patch = ["subprocess"]
omit = [
    "tests/*",
    "examples/*",
    "scripts/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.uv]
resolution = "highest"
